fix: fix song title cutting off

--- a/components/SpotifyPlayblack/SpotifyPlayback.module.css
+++ b/components/SpotifyPlayblack/SpotifyPlayback.module.css
@@ -35,7 +35,7 @@
 }
 
 .card__title {
-  margin-top: 20px;
+  margin-top: 15px;
   font-size: 18px;
   color: var(--text);
   transition: color 0.3s;
